@@ -74,6 +74,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version> <!-- Specify the Surefire Plugin version -->
+                <configuration>
+                    <argLine>
+                        @{jaCoCoArgLine}
+                        --add-opens budgetApplication/app=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
             <!-- Run the checkstyle code quality tool -->
             <plugin>
@@ -93,7 +99,10 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version> <!-- Specify the JaCoCo Plugin version -->
+              <configuration>
+                  <propertyName>jaCoCoArgLine</propertyName>
+              </configuration>
+
             </plugin>
         </plugins>
     </build>
